--- a/frontend/src/styles/button.scss
+++ b/frontend/src/styles/button.scss
@@ -1,28 +1,34 @@
 .button {
-        height: 50px;
-        border-radius: 8px;
-        font-weight: 500;
-        background: #835afd;
-        color: #fff;
-        padding: 0 32px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        border: 0;
-        transition: filter 0.2s;
+    height: 50px;
+    border-radius: 8px;
+    font-weight: 500;
+    background: #835afd;
+    color: #fff;
+    padding: 0 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: 0;
+    transition: filter 0.2s;
 
-        img {
-            margin-right: 8px;
-        }
+    img {
+        margin-right: 8px;
+    }
 
-        //Only not disabled apply this effect
-        &:not(:disabled):hover {
-            filter: brightness(0.9);
-        }
+    &.outlined {
+        background: #fff;
+        border: 1px solid #835afd;
+        color: #835afd;
+    }
 
-        &:disabled {
-            opacity: 0.6;
-            cursor: not-allowed;
-        }
+    //Only not disabled apply this effect
+    &:not(:disabled):hover {
+        filter: brightness(0.9);
+    }
+
+    &:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+    }
 }
